# explore-iot-operations

./: .gitignore  Cargo.toml  Dockerfile  README.md  example.sql  go.mod  index.html  mageerrors.go  notes.txt  quickstart_to_azure_samples.md
.devcontainer/: Dockerfile  devcontainer.json  onCreateCommand.sh  postCreateCommand.sh  postStartCommand.sh  welcome.txt
.github/: CODEOWNERS
.github/workflows/: anomaly_detection_ghcr.yml  callout_build.yml  callout_test.yml  device_simulator_build.yml  device_simulator_test.yml  docker_build.yml  ghcr.yml  ghcr_graph.yml  ghcr_module.yml  http_grpc_callout_build.yml  http_grpc_callout_ghcr.yml  http_grpc_callout_test.yml  http_grpc_shift_calculation_ghcr.yml  industrial_data_simulator_ghcr.yml  industrial_data_simulator_test.yml  krill_build.yml  krill_test.yml  mage_tests.yml  module_ghcr.yml  static.yml  wasm-python-build.yml  wasm-rust-build.yml
adr-schema-gen/: index.html  script.js  styles.css
deploy/: auth-server-template.yaml  cleanup.sh
docker/wasm-rust-build/: Dockerfile  README.md
docs/: ORGANIZATION.md  README.md
lib/env/: env_test.go  go.mod
lib/example/: example.go  example_test.go
lib/logger/: go.mod  go.sum  logger_test.go
lib/mage/: go.mod  go.sum  mageerrors.go  magefile.go
lib/proto/: go.mod  go.sum  message.pb.go  message.proto  message_grpc.pb.go  proto_test.go
quickstart/: README_ADVANCED.md  quick_vm_build.md  readme.md
quickstart-test-scripts/: test-quickstart-configure.sh
quickstart/arc_build_linux/: arc_enable.ps1  backup_aio_configs.sh  install_worker.sh  installer.sh  linux_aio_cleanup.sh  linux_build_steps.md  verify-csi-secret-store.sh
quickstart/arm_templates/: README.md  containerRegistry.json  deviceRegistryNamespace.json  keyVault.json  keyVaultRoleAssignment.json  managedIdentity.json  parameters.template.json  resourceGroup.json  schemaRegistry.json  storageAccount.json  storageRoleAssignment.json
quickstart/config/: advanced_config.template  quickstart_config.template  readme.md
quickstart/external_configuration/: Deploy-EdgeModules.ps1  External-Configurator.ps1  grant_entra_id_roles.ps1  session-bootstrap.ps1
quickstart/fabrikam-HMI-26/: README.md
quickstart/modules/: README.md
samples/ContextAppForDSS/: ContextAppForDSS.sln  console-app-configmap.yaml  console-app-deployment.yaml  console-app-secret.yaml
samples/acsa-config/: enable-rp-on-arc.sh
samples/aio-onvif-connector-ptz-demo/: Aio.Onvif.Connector.Ptz.Demo.sln  README.md  media.json  nuget.config  ptz.json
samples/anomaly-detection/: Dockerfile  README.md  go.mod  go.sum  magefile.go  manifest.yml
samples/auth-server-template/: Cargo.toml  Dockerfile  README.md  api.yaml  custom-auth.yaml
samples/auth-server-template/api/: 0.5.0.yaml
samples/auth-server-template/deploy/: auth-server-template.yaml  build_image.sh  make_credentials.sh
samples/auth-server-template/src/: authenticate.rs  http.rs  incoming.rs  main.rs
samples/auth-server-user-pass-mqtt/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  cspell.json
samples/auth-server-user-pass-mqtt/.devcontainer/: bootstrap.sh  devcontainer.json
samples/auth-server-user-pass-mqtt/deploy/:  custom-user-pass-auth-server.yaml  build_image.sh  custom-user-pass-auth-server.yaml
samples/auth-server-user-pass-mqtt/docs/: credentials.md  debug.md  develoop.md
samples/auth-server-user-pass-mqtt/src/: api.rs  main.rs  model.rs
samples/auth-server-user-pass-mqtt/src/username_password_authenticator/: authenticator.rs  mod.rs  watcher.rs
samples/auth-server-user-pass-mqtt/tools/: hash.sh
samples/callout/: .gitignore  Dockerfile  README.md  config.go  config.yml  go.mod  go.sum  grpc.go  magefile.go  main.go  output.go  server.go
samples/context-app-csharp/: Dockerfile  console-app-configmap.yaml  console-app-deployment.yaml  e4k-simple.yaml
samples/context-app-dotnet/: .helmignore  Chart.yaml  Dockerfile  NuGet.config  ReadMe.md  client_password.txt  clientinsecure.crt  clientinsecure.key  clientsec.crt  clientsec.key  console-app-configmap.yaml  console-app-deployment.yaml  password.txt  (+8 more)
samples/wasm/operators/collection/: Cargo.toml
samples/wasm/operators/collection/src/: lib.rs
samples/wasm/operators/format/: Cargo.toml  Dockerfile
samples/wasm/operators/format/src/: lib.rs
samples/wasm/operators/humidity/: Cargo.toml  Dockerfile
samples/wasm/operators/opc-ua/: Cargo.toml  Dockerfile
samples/wasm/operators/opc-ua/src/: lib.rs
samples/wasm/operators/snapshot/: Cargo.toml  Dockerfile
samples/wasm/operators/snapshot/src/: lib.rs
samples/wasm/operators/temperature/: Cargo.toml  README.md
samples/wasm/operators/temperature/src/: lib.rs
samples/wasm/rust/examples/collection/: Cargo.toml
samples/wasm/rust/examples/collection/src/: lib.rs
samples/wasm/rust/examples/enrichment/: Cargo.toml
samples/wasm/rust/examples/enrichment/src/: lib.rs
samples/wasm/rust/examples/format/: Cargo.toml
samples/wasm/rust/examples/format/.cargo/: config.toml
samples/wasm/rust/examples/format/src/: lib.rs
samples/wasm/rust/examples/otel-enrich/: Cargo.toml
samples/wasm/rust/examples/otel-enrich/.cargo/: config.toml
samples/wasm/rust/examples/otel-enrich/src/: lib.rs
samples/wasm/rust/examples/otel-transform/: Cargo.toml
samples/wasm/rust/examples/otel-transform/src/: lib.rs
samples/wasm/rust/examples/otel/module-otel-enrich/: Cargo.toml
samples/wasm/rust/examples/otel/module-otel-transform/: Cargo.toml
samples/wasm/rust/examples/snapshot/: Cargo.toml
samples/wasm/rust/examples/snapshot/src/: lib.rs
samples/wasm/rust/examples/snapshot/wit/: wasi-nn.wit
samples/wasm/rust/examples/viconverter/: Cargo.toml
samples/wasm/rust/examples/viconverter/src/: lib.rs
samples/wasm/schema-registry-scenario/operators/filter/: Cargo.toml  Dockerfile  README.md
samples/wasm/schema-registry-scenario/operators/filter/src/: lib.rs
schema-gen-helper/: styles.css
scripts/: arcConnect.sh  iotopsQuickstart.sh
src/: authenticate.rs  http.rs  incoming.rs  main.rs
toolbox/: .gitignore  README.md  go.mod  magefile.go
(+1756 files in other folders)
