[package]
name = "auth-server-template"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
openssl = "0.10"
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-openssl = "0.6"
