[package]
name = "auth-server-user-pass-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
actix-web = { version = "4", features = ["openssl"] }
openssl = "0.10"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"