[package]
name = "auth-server-user-pass-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
notify-debouncer-mini = {version = "0.2", default-features = false}
openssl = "0.10"
parking_lot = "0.12"
password-hash = { version = "0.4", features = ["alloc"] }
pbkdf2 = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = {version = "1", features = ["sync"]}
toml = "0.7"

[dev-dependencies]
mockall = "0.9"
tempfile = "3.15"
tokio = { version = "1.28", features = ["rt", "macros", "time", "test-util"] }