[package]
name = "collection"
version = "0.0.2"
authors = ["Wasm Graph Devs"]
license = "MIT"
edition = "2021"

[dependencies]
wit-bindgen = "0.22"
wasm_graph_sdk = { version = "=1.1.1", registry = "aio-sdks" }

serde = { version = "1", features = [
	"derive",
	"rc",
] }
serde_json = { version = "1.0", default-features = false, features = [
	"alloc",
] }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
