[package]
name = "humidity"
version = "0.0.2"
authors = ["Wasm Graph Devs"]
license = "MIT"
edition = "2021"

[dependencies]
wit-bindgen = "0.22"
wasm_graph_sdk = { version = "=1.1.3", registry = "aio-wg" }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"alloc", # "serde_json requires that either `std` (default) or `alloc` feature is enabled"
] }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
