[package]
name = "snapshot"
version = "0.0.1"
authors = ["Wasm Graph Devs"]
license = "MIT"
edition = "2021"

[dependencies]
ndarray = "0.16.1"
wit-bindgen = "0.22"
wasm_graph_sdk = { version = "=1.1.3", registry = "aio-wg" }
serde = { version = "1", features = [
	"derive",
	"rc",
] }
serde_json = { version = "1.0", default-features = false, features = [
	"alloc",
] }

[lib]
crate-type = ["cdylib"]
