[package]
name = "format"
version = "0.0.2"
authors = ["TinyKube Devs"]
license = "MIT"
edition = "2021"


[dependencies]
image = { version = "0.24" }
wit-bindgen = "0.22"
tinykube_wasm_sdk = { version = "0.2.0", registry="azure-vscode-tinykube" }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"alloc", # "serde_json requires that either `std` (default) or `alloc` feature is enabled"
] }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
