[package]
name = "otel-enrich"
version = "0.0.1"
authors = ["Wasm Graph Devs"]
license = "MIT"
edition = "2021"

[dependencies]
wit-bindgen = "0.22"
wasm_graph_sdk = { version = "=1.1.3", registry="aio-wg" }
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 

[lib]
crate-type = ["cdylib"]
