[package]
name = "viconverter"
version = "0.2.0"
authors = ["Wasm Graph Devs"]
license = "MIT"
edition = "2021"

[dependencies]
wit-bindgen = "0.22"
wasm_graph_sdk = { version = "=1.1.1", registry = "aio-sdks" }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"alloc", # "serde_json requires that either `std` (default) or `alloc` feature is enabled"
] }
jsonschema = { version = "0.8", default-features = false}
once_cell = "1.17.1"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
