[package]
name = "filter"
version = "0.0.1"
authors = ["TinyKube Devs"]
license = "MIT"
edition = "2021"

[dependencies]
wit-bindgen = "0.22"
wasm_graph_sdk = { version = "=1.1.3", registry = "aio-wg" }
serde = { version = "1", features = [
	"derive",
	"rc",
] }
serde_json = { version = "1.0", default-features = false, features = [
	"alloc",
] }
jsonschema = { version = "0.8", default-features = false}
once_cell = "1.17.1"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
