[package]
name = "module-otel-enrich"
version = "0.1.0"
authors = ["TinyKube Devs"]
license = "MIT"
edition = "2021"


[dependencies]
wit-bindgen = { workspace = true }
tinykube_wasm_sdk = { workspace = true }


[lib]
crate-type = ["cdylib"]


[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["wit-bindgen"]

