[package]
name = "module-otel-transform"
version = "0.1.0"
authors = ["TinyKube Devs"]
license = "MIT"
edition = "2021"


[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = [
	"alloc", # "serde_json requires that either `std` (default) or `alloc` feature is enabled"
] }
wit-bindgen = { workspace = true }
tinykube_wasm_sdk = { workspace = true }


[lib]
crate-type = ["cdylib"]


[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["wit-bindgen"]
